--- a/package.json
+++ b/package.json
@@ -6,15 +6,27 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "build:export": "next build && next export",
+    "build:css": "tailwindcss -i ./src/tailwind.css -o ./styles/build.css",
+    "watch:css": "tailwindcss -i ./src/tailwind.css -o ./styles/build.css --watch"
   },
   "dependencies": {
     "next": "12.1.6",
+    "next-auth": "^4.5.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.0",
+    "@tailwindcss/forms": "^0.5.2",
+    "@tailwindcss/line-clamp": "^0.4.0",
+    "@tailwindcss/typography": "^0.5.2",
+    "autoprefixer": "^10.4.7",
     "eslint": "8.18.0",
-    "eslint-config-next": "12.1.6"
+    "eslint-config-next": "12.1.6",
+    "html5-boilerplate": "^8.0.0",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.3"
   }
 }
