--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint",
     "build:export": "next build && next export",
     "build:css": "tailwindcss -i ./src/tailwind.css -o ./styles/build.css",
-    "watch:css": "tailwindcss -i ./src/tailwind.css -o ./styles/build.css --watch"
+    "watch:css": "tailwindcss -i ./src/tailwind.css -o ./styles/build.css --watch",
+    "sass:globals": "sass ./src/globals.scss ./styles/globals.css",
+    "sass:globals:watch": "sass ./src/globals.scss ./styles/globals.css --watch"
   },
   "dependencies": {
     "next": "12.1.6",
     "next-auth": "^4.5.0",
+    "nodemailer": "^6.7.5",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
@@ -26,6 +29,7 @@
     "eslint": "8.18.0",
     "eslint-config-next": "12.1.6",
     "html5-boilerplate": "^8.0.0",
+    "node-sass": "^7.0.1",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.3"
   }
