--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "sass:globals:watch": "sass ./src/globals.scss ./styles/globals.css --watch"
   },
   "dependencies": {
+    "framer-motion": "^6.3.11",
     "next": "12.1.6",
     "next-auth": "^4.5.0",
     "nodemailer": "^6.7.5",
