--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "sass:globals:watch": "sass ./src/globals.scss ./styles/globals.css --watch"
   },
   "dependencies": {
+    "@next-auth/mongodb-adapter": "^1.0.3",
     "framer-motion": "^6.3.11",
+    "mongodb": "^4.7.0",
     "next": "12.1.6",
     "next-auth": "^4.5.0",
     "nodemailer": "^6.7.5",
@@ -32,6 +34,7 @@
     "html5-boilerplate": "^8.0.0",
     "node-sass": "^7.0.1",
     "postcss": "^8.4.14",
+    "sass": "^1.52.3",
     "tailwindcss": "^3.1.3"
   }
 }
