--- a/.env.example
+++ b/.env.example
@@ -22,6 +22,9 @@ GOOGLE_SECRET=
 TWITTER_ID=
 TWITTER_SECRET=
 
+INSTAGRAM_CLIENT_ID=
+INSTAGRAM_CLIENT_SECRET=
+
 EMAIL_SERVER=smtp://username:password@smtp.example.com:587
 EMAIL_FROM=NextAuth <noreply@example.com>
 
