--- a/package.json
+++ b/package.json
@@ -10,17 +10,21 @@
     "build:export": "next build && next export",
     "build:css": "tailwindcss -i ./src/tailwind.css -o ./styles/build.css",
     "watch:css": "tailwindcss -i ./src/tailwind.css -o ./styles/build.css --watch",
-    "sass:globals": "sass ./src/globals.scss ./styles/globals.css",
-    "sass:globals:watch": "sass ./src/globals.scss ./styles/globals.css --watch"
+    "sass:globals": "sass ./src/globals.scss ./styles/globals.css ",
+    "sass:globals:watch": "sass ./src/globals.scss ./styles/globals.css --watch ",
+    "build:bs": "sass --style expanded --source-map --embed-sources --no-error-css ./src/bootstrap.scss:./styles/bootstrap.css ",
+    "build:bs:watch": "sass --style expanded --source-map --embed-sources --no-error-css ./src/bootstrap.scss:./styles/bootstrap.css --watch "
   },
   "dependencies": {
     "@next-auth/mongodb-adapter": "^1.0.3",
+    "bootstrap": "^5.1.3",
     "framer-motion": "^6.3.11",
     "mongodb": "^4.7.0",
     "next": "12.1.6",
     "next-auth": "^4.5.0",
     "nodemailer": "^6.7.5",
     "react": "18.2.0",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
