--- a/package.json
+++ b/package.json
@@ -15,13 +15,21 @@
   },
   "dependencies": {
     "@next-auth/mongodb-adapter": "^1.0.3",
+    "@popperjs/core": "^2.11.5",
+    "animate.css": "^4.1.1",
+    "axios": "^0.27.2",
     "framer-motion": "^6.3.11",
     "mongodb": "^4.7.0",
     "next": "12.1.6",
     "next-auth": "^4.5.0",
+    "nikolav-q": "^1.1.4",
     "nodemailer": "^6.7.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.4.0",
+    "react-popper": "^2.3.0",
+    "react-query": "^3.39.1",
+    "react-share": "^4.4.0"
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.0",
@@ -35,6 +43,6 @@
     "node-sass": "^7.0.1",
     "postcss": "^8.4.14",
     "sass": "^1.52.3",
-    "tailwindcss": "^3.1.3"
+    "tailwindcss": "^3.1.4"
   }
 }
