--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@next-auth/mongodb-adapter": "^1.0.3",
     "@popperjs/core": "^2.11.5",
+    "@supabase/supabase-js": "^1.35.3",
     "animate.css": "^4.1.1",
     "axios": "^0.27.2",
     "framer-motion": "^6.3.11",
