--- a/package.json
+++ b/package.json
@@ -37,10 +37,12 @@
     "@tailwindcss/forms": "^0.5.2",
     "@tailwindcss/line-clamp": "^0.4.0",
     "@tailwindcss/typography": "^0.5.2",
+    "@testing-library/react": "^13.3.0",
     "autoprefixer": "^10.4.7",
     "eslint": "8.18.0",
     "eslint-config-next": "12.1.6",
     "html5-boilerplate": "^8.0.0",
+    "jest": "^28.1.1",
     "node-sass": "^7.0.1",
     "postcss": "^8.4.14",
     "sass": "^1.52.3",
