--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "@supabase/supabase-js": "^1.35.3",
     "animate.css": "^4.1.1",
     "axios": "^0.27.2",
+    "classnames": "^2.3.1",
+    "escape-html": "^1.0.3",
     "framer-motion": "^6.3.11",
+    "lodash": "^4.17.21",
     "mongodb": "^4.7.0",
     "next": "12.1.6",
     "next-auth": "^4.5.0",
@@ -28,6 +31,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
+    "react-loader-spinner": "^5.1.5",
     "react-popper": "^2.3.0",
     "react-query": "^3.39.1",
     "react-share": "^4.4.0"
