--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "sass:globals:watch": "sass ./src/globals.scss ./styles/globals.css --watch"
   },
   "dependencies": {
+    "@fancyapps/ui": "^4.0.27",
+    "@headlessui/react": "^1.6.5",
     "@next-auth/mongodb-adapter": "^1.0.3",
     "@popperjs/core": "^2.11.5",
     "@supabase/supabase-js": "^1.35.3",
@@ -27,7 +29,6 @@
     "next": "12.1.6",
     "next-auth": "^4.5.0",
     "nikolav-q": "^1.1.4",
-    "nodemailer": "^6.7.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
