--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "build:css": "tailwindcss -i ./src/tailwind.css -o ./styles/build.css",
     "watch:css": "tailwindcss -i ./src/tailwind.css -o ./styles/build.css --watch",
     "sass:globals": "sass ./src/globals.scss ./styles/globals.css",
-    "sass:globals:watch": "sass ./src/globals.scss ./styles/globals.css --watch"
+    "sass:globals:watch": "sass ./src/globals.scss ./styles/globals.css --watch",
+    "test": "jest ",
+    "test:watch": "jest --watch",
+    "test:ci": "jest --ci"
   },
   "dependencies": {
     "@fancyapps/ui": "^4.0.27",
@@ -38,18 +41,26 @@
     "react-share": "^4.4.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.18.5",
+    "@babel/preset-env": "^7.18.2",
+    "@babel/preset-react": "^7.17.12",
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/forms": "^0.5.2",
     "@tailwindcss/line-clamp": "^0.4.0",
     "@tailwindcss/typography": "^0.5.2",
+    "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^14.2.1",
     "autoprefixer": "^10.4.7",
+    "babel-jest": "^28.1.1",
     "eslint": "8.18.0",
     "eslint-config-next": "12.1.6",
     "html5-boilerplate": "^8.0.0",
     "jest": "^28.1.1",
+    "jest-environment-jsdom": "^28.1.1",
     "node-sass": "^7.0.1",
     "postcss": "^8.4.14",
+    "react-test-renderer": "^18.2.0",
     "sass": "^1.52.3",
     "tailwindcss": "^3.1.4"
   }
