--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@headlessui/react": "^1.6.5",
     "@next-auth/mongodb-adapter": "^1.0.3",
     "@popperjs/core": "^2.11.5",
+    "@reduxjs/toolkit": "^1.8.2",
     "@supabase/supabase-js": "^1.35.3",
     "animate.css": "^4.1.1",
     "axios": "^0.27.2",
@@ -38,6 +39,7 @@
     "react-loader-spinner": "^5.1.5",
     "react-popper": "^2.3.0",
     "react-query": "^3.39.1",
+    "react-redux": "^8.0.2",
     "react-share": "^4.4.0"
   },
   "devDependencies": {
