--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@headlessui/react": "^1.6.5",
     "@next-auth/mongodb-adapter": "^1.0.3",
     "@popperjs/core": "^2.11.5",
+    "@react-rxjs/core": "^0.9.8",
+    "@react-rxjs/utils": "^0.9.5",
     "@reduxjs/toolkit": "^1.8.2",
     "@supabase/supabase-js": "^1.35.3",
     "animate.css": "^4.1.1",
@@ -40,7 +42,8 @@
     "react-popper": "^2.3.0",
     "react-query": "^3.39.1",
     "react-redux": "^8.0.2",
-    "react-share": "^4.4.0"
+    "react-share": "^4.4.0",
+    "rxjs": "^7.5.5"
   },
   "devDependencies": {
     "@babel/core": "^7.18.5",
@@ -60,6 +63,7 @@
     "html5-boilerplate": "^8.0.0",
     "jest": "^28.1.1",
     "jest-environment-jsdom": "^28.1.1",
+    "msw": "^0.42.3",
     "node-sass": "^7.0.1",
     "postcss": "^8.4.14",
     "react-test-renderer": "^18.2.0",
