--- a/package.json
+++ b/package.json
@@ -17,8 +17,12 @@
     "test:ci": "jest --ci"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
     "@fancyapps/ui": "^4.0.27",
     "@headlessui/react": "^1.6.5",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/material": "^5.8.5",
     "@next-auth/mongodb-adapter": "^1.0.3",
     "@popperjs/core": "^2.11.5",
     "@react-rxjs/core": "^0.9.8",
