--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "next": "12.1.6",
     "next-auth": "^4.5.0",
     "nikolav-q": "^1.1.4",
+    "nikolav-tree": "^1.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
