--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "classnames": "^2.3.1",
     "date-fns": "^2.28.0",
     "escape-html": "^1.0.3",
+    "firebase": "^9.8.4",
     "framer-motion": "^6.3.11",
     "lodash": "^4.17.21",
     "mongodb": "^4.7.0",
