--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-query": "^3.39.1",
     "react-redux": "^8.0.2",
     "react-share": "^4.4.0",
+    "react-table": "^7.8.0",
     "react-toastify": "^9.0.5",
     "rxjs": "^7.5.5"
   },
