--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "lodash": "^4.17.21",
     "md5": "^2.3.0",
     "mongodb": "^4.7.0",
+    "nanoid": "^4.0.0",
     "next": "12.1.6",
     "next-auth": "^4.5.0",
     "nikolav-q": "^1.1.7",
