--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "msw": "^0.42.3",
     "node-sass": "^7.0.1",
     "postcss": "^8.4.14",
+    "postcss-import": "^14.1.0",
     "react-test-renderer": "^18.2.0",
     "sass": "^1.52.3",
     "tailwindcss": "^3.1.4"
